# SSWP4WT

./: CMakeLists.txt  README.md  createprocess.cc  hideconsole.cc  hideconsole.h  path.cc  path.h  shellexecute.cc  upenv.cc  upenv.h  wallpaper.cc
config/: config.ini  run.bat  run.vbs  setup.bat
